    - dependency installer for Fedora 37.
    - COD::Spacegroups::Lookup::COD:
    - three more non-standard space group settings:
        - H-M symbols: 'P 4 21 2 (a-1/4,b+1/4,c)', 'C 2 2 21 (a,b,c+1/4)',
                       'P 21 21 21 (a+1/4,b-1/4,c)'.
        - Hall symbols: 'P 4ab 2ab (x+1/4,y-1/4,z)', 'C 2c 2 (x,y,z-1/4)',
                        'P 2ac 2ab (x-1/4,y+1/4,z)'.
  * Changed:
    - data/replacement-values/replacement_tags.lst:
      - added several data name replacement rules.
    - data/replacement_values/replacement_values.lst
      - added several replacement rules for the following data items:
        - '_atom_site_adp_type'.
        - '_atom_site_thermal_displace_type'.
        - '_refine_ls_structure_factor_coef'.
  * Fixed:
    - cif_symop_apply:
        - updated the handling of atomic coordinates with standard uncertainties
          to no longer generate warnings.
    - COD::CIF::DDL::DDLm::Validate:
        - a typo in a validation message reporting 'datetime' content type
          violations.
    - scripts/cif_cod_deposit:
        - corrected the configuration variable name 'bypass_check_password'.
    - cif_filter:
        - the CIF header is now output only once at the beginning of the
          output stream instead of each data block.
  * Removed:
    - dependency installer for Fedora 35.

cod-tools (3.7.0)

  * Added:
    - cif_filter:
        - the '--estimate-space-group' option as an alias for
          the '--estimate-spacegroup' option.
        - the '--keep-unrecognised-space-groups' option as an alias for
          the '--keep-unrecognised-spacegroups' option.
  * Changed:
    - COD::CIF::Data:
        - updated the lookup_space_group() subroutine to also strip leading
          and trailing whitespace symbols when constructing lookup keys.
        - updated the get_space_group_number() subroutine to report symmetry
          operation lists that do not correspond to a known space group.