@@ -1,5 +1,5 @@
 #\#CIF_2.0
-data_missing_drel_key
+data_[VALID]_missing_drel_key
 loop_
 _looped_drel_category.component_1
 _looped_drel_category.component_2
@@ -8,3 +8,89 @@ _looped_drel_category.placeholder_content
 1 2 3 Placeholder_0
 2 3 1 Placeholder_1
 3 2 1 Placeholder_2
+
+data_[VALID]_id_key_default_by_drel_method
+loop_
+#_drel_default_id_key.id
+_drel_default_id_key.item_1
+value_0
+value_1
+value_2
+
+data_[INVALID]_id_key_no_default_by_drel_method
+loop_
+#_drel_no_default_id_key.id
+_drel_no_default_id_key.item_1
+value_0
+value_1
+value_2
+
+data_[VALID]_single_key_name_default_by_drel_method
+loop_
+#_drel_default_single_key_name.id
+_drel_default_single_key_name.item_1
+value_0
+value_1
+value_2
+
+##
+# Data item '_drel_default_multi_key_name.id_1' is considered evaluatable
+# since the definition of this data item contains an Evaluation dREL method.
+##
+data_[VALID]_multi_key_name_eval_by_drel_method
+loop_
+#_drel_default_multi_key_name.id_1
+_drel_default_multi_key_name.id_2
+_drel_default_multi_key_name.id_3
+_drel_default_multi_key_name.id_4
+_drel_default_multi_key_name.item_1
+1 1 1 value_0
+1 2 2 value_1
+1 3 3 value_2
+
+##
+# Data item '_drel_default_multi_key_name.id_2' is considered evaluatable
+# since the definition of this data item contains a Definition dREL method
+# which assigns a default value.
+##
+data_[VALID]_multi_key_name_default_by_drel_method
+loop_
+_drel_default_multi_key_name.id_1
+#_drel_default_multi_key_name.id_2
+_drel_default_multi_key_name.id_3
+_drel_default_multi_key_name.id_4
+_drel_default_multi_key_name.item_1
+1 1 1 value_0
+1 2 2 value_1
+1 3 3 value_2
+
+##
+# Data item '_drel_default_multi_key_name.id_3' is considered not evaluatable.
+# Even though the definition of this data item contains a Definition dREL
+# method, the method does not assing a default value.
+##
+data_[INVALID]_multi_key_name_no_default_by_drel_method
+loop_
+_drel_default_multi_key_name.id_1
+_drel_default_multi_key_name.id_2
+#_drel_default_multi_key_name.id_3
+_drel_default_multi_key_name.id_4
+_drel_default_multi_key_name.item_1
+1 1 1 value_0
+1 2 2 value_1
+1 3 3 value_2
+
+##
+# Data item '_drel_default_multi_key_name.id_4' is considered not evaluatable
+# since the definition of this data item contains no dREL methods.
+##
+data_[INVALID]_multi_key_name_no_drel_method
+loop_
+_drel_default_multi_key_name.id_1
+_drel_default_multi_key_name.id_2
+_drel_default_multi_key_name.id_3
+#_drel_default_multi_key_name.id_4
+_drel_default_multi_key_name.item_1
+1 1 1 value_0
+1 2 2 value_1
+1 3 3 value_2
