@@ -9,8 +9,8 @@ data_FAKE_KEY_DIC
 
     _dictionary.title            TEST_KEY_DIC
     _dictionary.class            Instance
-    _dictionary.version          0.2.0
-    _dictionary.date             2021-11-08
+    _dictionary.version          0.3.0
+    _dictionary.date             2023-04-01
     _dictionary.uri              https://www.example.com/test_key.dic
     _dictionary.ddl_conformance  4.1.0
     _dictionary.namespace        SoftwareTest
@@ -33,7 +33,11 @@ data_FAKE_KEY_DIC
 ;
     0.2.0 2021-11-08
 ;
-  Added the LOOPED_WORD_CATEGORY categories.
+  Added the LOOPED_WORD_CATEGORY category.
+;
+    0.3.0 2023-04-01
+;
+  Added the DREL_DEFAULT_ID_CATEGORY category.
 ;
 
 save_LOOP_PARENT
@@ -641,6 +645,393 @@ save_looped_drel_category.placeholder_content
     _type.container              Single
     _type.contents               Text
 save_
+
+################################################################################
+
+save_DREL_DEFAULT_ID_KEY
+
+    _definition.id               DREL_DEFAULT_ID_KEY
+    _definition.scope            Category
+    _definition.class            Loop
+    _definition.update           2023-04-01
+    _description.text
+;
+    A looped category that has a category key the default value of which
+    can be evaluated using dREL methods.
+;
+    _name.category_id            LOOP_PARENT
+    _name.object_id              DREL_DEFAULT_ID_KEY
+    _category.key_id             '_drel_default_id_key.id'
+
+save_
+
+save_drel_default_id_key.id
+
+    _definition.id               '_drel_default_id_key.id'
+    _definition.scope            Item
+    _definition.class            Attribute
+    _definition.update           2023-04-01
+    _description.text
+;
+  Category key that has a dREL definition method which assigns a default value.
+;
+    _description.common
+;
+  Category key that has a dREL definition method which assigns a default value.
+;
+    _name.category_id            drel_default_id_key
+    _name.object_id              id
+    _type.purpose                Key
+    _type.source                 Assigned
+    _type.container              Single
+    _type.contents               Integer
+     loop_
+    _method.purpose
+    _method.expression
+     Definition
+;
+    _enumeration.default = Current_row(drel_default_id_key.id)
+;
+
+save_
+
+save_drel_default_id_key.item_1
+
+    _definition.id               '_drel_default_id_key.item_1'
+    _definition.scope            Item
+    _definition.class            Attribute
+    _definition.update           2023-04-01
+    _description.text
+;
+     A placeholder data item.
+;
+    _description.common
+;
+     A placeholder data item.
+;
+    _name.category_id            drel_default_id_key
+    _name.object_id              item_1
+    _type.purpose                Describe
+    _type.source                 Assigned
+    _type.container              Single
+    _type.contents               Text
+
+save_
+
+################################################################################
+
+save_DREL_NO_DEFAULT_ID_KEY
+
+    _definition.id               DREL_NO_DEFAULT_ID_KEY
+    _definition.scope            Category
+    _definition.class            Loop
+    _definition.update           2023-04-01
+    _description.text
+;
+    A looped category that has a category key the default value of which
+    cannot be evaluated using the provided dREL methods.
+;
+    _name.category_id            LOOP_PARENT
+    _name.object_id              DREL_NO_DEFAULT_ID_KEY
+    _category.key_id             '_drel_no_default_id_key.id'
+
+save_
+
+save_drel_no_default_id_key.id
+
+    _definition.id               '_drel_no_default_id_key.id'
+    _definition.scope            Item
+    _definition.class            Attribute
+    _definition.update           2023-04-01
+    _description.text
+;
+  Category key that has several dREL methods, none of which assign it a default
+  value. Therefore, the item is should not be treated as evaluatable.
+;
+    _description.common
+;
+  Category key that has several dREL methods, none of which assign it a default
+  value. Therefore, the item is should not be treated as evaluatable.
+;
+    _name.category_id            drel_no_default_id_key
+    _name.object_id              id
+    _type.purpose                Key
+    _type.source                 Assigned
+    _type.container              Single
+    _type.contents               Integer
+     loop_
+    _method.purpose
+    _method.expression
+     Definition
+;
+     _units.code = none
+;
+     Validation
+;
+     _drel_no_default_id_key.id > 0
+;
+
+save_
+
+save_drel_no_default_id_key.item_1
+
+    _definition.id               '_drel_no_default_id_key.item_1'
+    _definition.scope            Item
+    _definition.class            Attribute
+    _definition.update           2023-04-01
+    _description.text
+;
+     A placeholder data item.
+;
+    _description.common
+;
+     A placeholder data item.
+;
+    _name.category_id            drel_no_default_id_key
+    _name.object_id              item_1
+    _type.purpose                Describe
+    _type.source                 Assigned
+    _type.container              Single
+    _type.contents               Text
+
+save_
+
+################################################################################
+
+save_DREL_DEFAULT_SINGLE_KEY_NAME
+    _definition.id               DREL_DEFAULT_SINGLE_KEY_NAME
+    _definition.scope            Category
+    _definition.class            Loop
+    _definition.update           2023-04-01
+    _description.text
+;
+    A looped category that has a single category key name the default value
+    of which can be evaluated using dREL methods.
+;
+    _name.category_id            LOOP_PARENT
+    _name.object_id              DREL_DEFAULT_SINGLE_KEY_NAME
+    _category_key.name           '_drel_default_single_key_name.id'
+save_
+
+save_drel_default_single_key_name.id
+
+    _definition.id               '_drel_default_single_key_name.id'
+    _definition.scope            Item
+    _definition.class            Attribute
+    _definition.update           2023-04-01
+    _description.text
+;
+  Category key that has a dREL definition method which assigns a default value.
+;
+    _description.common
+;
+  Category key that has a dREL definition method which assigns a default value.
+;
+    _name.category_id            drel_default_single_key_name
+    _name.object_id              id
+    _type.purpose                Key
+    _type.source                 Assigned
+    _type.container              Single
+    _type.contents               Integer
+     loop_
+    _method.purpose
+    _method.expression
+     Definition
+;
+    _enumeration.default = Current_row(drel_default_single_key_name.id)
+;
+
+save_
+
+save_drel_default_single_key_name.item_1
+
+    _definition.id               '_drel_default_single_key_name.item_1'
+    _definition.scope            Item
+    _definition.class            Attribute
+    _definition.update           2023-04-01
+    _description.text
+;
+     A placeholder data item.
+;
+    _description.common
+;
+     A placeholder data item.
+;
+    _name.category_id            drel_default_single_key_name
+    _name.object_id              item_1
+    _type.purpose                Describe
+    _type.source                 Assigned
+    _type.container              Single
+    _type.contents               Text
+
+save_
+
+################################################################################
+
+save_DREL_DEFAULT_MULTI_KEY_NAME
+
+    _definition.id               DREL_DEFAULT_MULTI_KEY_NAME
+    _definition.scope            Category
+    _definition.class            Loop
+    _definition.update           2023-04-01
+    _description.text
+;
+    A looped category that has a category key which consists of multiple data
+    items. The values of some of the data items can be evaluated using dREL
+    Evaluation or Definition methods.
+;
+    _name.category_id            LOOP_PARENT
+    _name.object_id              DREL_DEFAULT_MULTI_KEY_NAME
+    loop_
+    _category_key.name
+        '_drel_default_multi_key_name.id_1'
+        '_drel_default_multi_key_name.id_2'
+        '_drel_default_multi_key_name.id_3'
+        '_drel_default_multi_key_name.id_4'
+
+save_
+
+save_drel_default_multi_key_name.id_1
+
+    _definition.id               '_drel_default_multi_key_name.id_1'
+    _definition.scope            Item
+    _definition.class            Attribute
+    _definition.update           2023-04-01
+    _description.text
+;
+  Category key that has a dREL Evaluation method.
+;
+    _description.common
+;
+  Category key that has a dREL Evaluation method.
+;
+    _name.category_id            drel_default_multi_key_name
+    _name.object_id              id_1
+    _type.purpose                Key
+    _type.source                 Assigned
+    _type.container              Single
+    _type.contents               Integer
+     loop_
+    _method.purpose
+    _method.expression
+     Evaluation
+;
+    _drel_default_multi_key_name.id_1 = 1;
+;
+
+save_
+
+save_drel_default_multi_key_name.id_2
+
+    _definition.id               '_drel_default_multi_key_name.id_2'
+    _definition.scope            Item
+    _definition.class            Attribute
+    _definition.update           2023-04-01
+    _description.text
+;
+  Category key that has a dREL Definition method which assigns a default value.
+;
+    _description.common
+;
+  Category key that has a dREL Definition method which assigns a default value.
+;
+    _name.category_id            drel_default_multi_key_name
+    _name.object_id              id_2
+    _type.purpose                Key
+    _type.source                 Assigned
+    _type.container              Single
+    _type.contents               Integer
+     loop_
+    _method.purpose
+    _method.expression
+     Definition
+;
+    _enumeration.default = Current_row(drel_default_multi_key_name.id_2)
+;
+
+save_
+
+save_drel_default_multi_key_name.id_3
+
+    _definition.id               '_drel_default_multi_key_name.id_3'
+    _definition.scope            Item
+    _definition.class            Attribute
+    _definition.update           2023-04-01
+    _description.text
+;
+  Category key that has several dREL methods, none of which assign it a default
+  value. Therefore, the item is should not be treated as evaluatable.
+;
+    _description.common
+;
+  Category key that has several dREL methods, none of which assign it a default
+  value. Therefore, the item is should not be treated as evaluatable.
+;
+    _name.category_id            drel_default_multi_key_name
+    _name.object_id              id_3
+    _type.purpose                Key
+    _type.source                 Assigned
+    _type.container              Single
+    _type.contents               Integer
+     loop_
+    _method.purpose
+    _method.expression
+     Definition
+;
+    _units.code = none
+;
+     Validation
+;
+    drel_default_multi_key_name.id_3 > 0
+;
+
+save_
+
+save_drel_default_multi_key_name.id_4
+
+    _definition.id               '_drel_default_multi_key_name.id_4'
+    _definition.scope            Item
+    _definition.class            Attribute
+    _definition.update           2023-04-01
+    _description.text
+;
+  Category key that does not have any dREL methods.
+;
+    _description.common
+;
+  Category key that does not have any dREL methods.
+;
+    _name.category_id            drel_default_multi_key_name
+    _name.object_id              id_4
+    _type.purpose                Key
+    _type.source                 Assigned
+    _type.container              Single
+    _type.contents               Integer
+
+save_
+
+save_drel_default_multi_key_name.item_1
+    _definition.id               '_drel_default_multi_key_name.item_1'
+    _definition.scope            Item
+    _definition.class            Attribute
+    _definition.update           2023-04-01
+    _description.text
+;
+     A placeholder data item.
+;
+    _description.common
+;
+     A placeholder data item.
+;
+    _name.category_id            drel_default_multi_key_name
+    _name.object_id              item_1
+    _type.purpose                Describe
+    _type.source                 Assigned
+    _type.container              Single
+    _type.contents               Text
+save_
+
+################################################################################
 
 save_LOOPED_COMPOSITE_CATEGORY
     _definition.id               LOOPED_COMPOSITE_CATEGORY
