@@ -1,0 +1,3 @@
+scripts/ddlm_validate: tests/cases/ddlm_validate_043.inp data_[INVALID]_id_key_no_default_by_drel_method: NOTE, missing category key data item -- the '_drel_no_default_id_key.id' data item must be provided in the loop containing the ['_drel_no_default_id_key.item_1'] data items.
+scripts/ddlm_validate: tests/cases/ddlm_validate_043.inp data_[INVALID]_multi_key_name_no_default_by_drel_method: NOTE, missing category key data item -- the '_drel_default_multi_key_name.id_3' data item must be provided in the loop containing the ['_drel_default_multi_key_name.id_1', '_drel_default_multi_key_name.id_2', '_drel_default_multi_key_name.id_4', '_drel_default_multi_key_name.item_1'] data items.
+scripts/ddlm_validate: tests/cases/ddlm_validate_043.inp data_[INVALID]_multi_key_name_no_drel_method: NOTE, missing category key data item -- the '_drel_default_multi_key_name.id_4' data item must be provided in the loop containing the ['_drel_default_multi_key_name.id_1', '_drel_default_multi_key_name.id_2', '_drel_default_multi_key_name.id_3', '_drel_default_multi_key_name.item_1'] data items.
