@@ -19,6 +19,9 @@ cod-tools (unreleased)
         - Hall symbols: 'P 4ab 2ab (x+1/4,y-1/4,z)', 'C 2c 2 (x,y,z-1/4)',
                         'P 2ac 2ab (x-1/4,y+1/4,z)'.
   * Changed:
+    - COD::CIF::DDL::DDLm::Validate:
+      - started treating data items with associated dREL code which assigns
+        a default value as evaluatable.
     - data/replacement-values/replacement_tags.lst:
       - added several data name replacement rules.
     - data/replacement_values/replacement_values.lst
